--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ mysqlclient = "*"
 djangorestframework-jwt = "*"
 django-rest-auth = "*"
 django-cors-headers = "*"
+awsebcli = "*"
 
 [dev-packages]
 
