--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-waypoint": "^8.0.1",
     "reactotron-react-js": "^1.13.0",
     "redux": "^4.0.0",
     "redux-i18n": "^1.5.13",
@@ -59,7 +60,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "PORT=8080 node scripts/start.js",
     "build": "node scripts/build.js",
     "extract": "i18n_extract",
     "import": "i18n_import --encoding=utf-8"
