--- a/.ebextensions/10_python.config
+++ b/.ebextensions/10_python.config
@@ -1,6 +1,6 @@
 container_commands:
   01_migrate:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py showmigrations"
+    command: "source /opt/python/run/venv/bin/activate && python manage.py users --noinput"
     leader_only: True
   02_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
