Set x frame options in wsgi.conf file

--- a/.ebextensions/wsgi.conf
+++ b/.ebextensions/wsgi.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 
 WSGIPassAuthorization On
-
 WSGIScriptAlias / /opt/python/current/app/config/wsgi.py
+Header set X-Frame-Options ALLOW-FROM https://www.messenger.com/, https://www.facebook.com/
 
 <Directory /opt/python/current/app/>
   Require all granted
