--- a/.ebextensions/20_logging.config
+++ b/.ebextensions/20_logging.config
@@ -3,3 +3,18 @@ commands:
     command: chmod g+s /opt/python/log
   02_change_owner:
     command: chown root:wsgi /opt/python/log
+files:
+  "/etc/awslogs/config/user-actions.conf" :
+    mode: "000642"
+    owner: root
+    group: wsgi
+    content: |
+      [/opt/python/log/info.log]
+      log_group_name = `{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "opt/python/log/info.log"]]}`
+      log_stream_name = {instance_id}
+      file =/opt/python/log/info.log
+services:
+  sysvinit:
+    awslogs:
+      files:
+        - "/etc/awslogs/config/user-actions.conf"
